commit inicial operix

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=3333
 NODE_ENV=development
-DATABASE_URL=postgresql://root:root@localhost:5432/limaref
+DATABASE_URL=postgresql://root:root@localhost:5432/operix
 ORIGIN=http://localhost:3000
 SECRET=FKOGJJKIDFGNHSDNF34903459034kodsfkjdf
 
