--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,15 @@
 services:
   db:
-    image: postgres
+    image: postgres:14-alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: root
       POSTGRES_USER: root
-      POSTGRES_DB: limaref
+      POSTGRES_DB: operix
     ports:
       - 5432:5432
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+volumes:
+  db-data:
